Fix Fix particles.js on iphone, google PSI

--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -20,19 +20,19 @@
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px)
     html, body
-        @include rem-baseline(10px)
+        @include rem-baseline(16px)
     h2
-        font-size: rem(60px)
+        font-size: rem(40px)
     h3
-        font-size: rem(36px)
+        //font-size: rem(36px)
     h5
-        font-size: rem(36px)
+        //font-size: rem(36px)
         margin: auto auto 15px
     p
-        font-size: rem(25px)
+        //font-size: rem(25px)
+        font-size: 1.2rem
 
-    #t
-        padding: 8% 0
+    #services
         margin: 0
     .social
         margin-left: 15px
@@ -43,40 +43,22 @@
         .contact-us
             position: inherit
             a
-                font-size: rem(28px)
                 margin-bottom: 10px
         .follow-us
             text-align: center
             margin-top: 15px
-            //text-align: left
             position: inherit
     .div-left img
         height: 40px
-        //display: inline-block
-        //width: 50%
-        //min-height: 1px
-        //padding-left: 15px
-        //padding-right: 15px
-        //float: left
-        //position: relative
-    .div-right
-        //position: relative
-        //display: inline-block
-        //width: 50%
-        //min-height: 1px
-        //padding-left: 15px
-        //padding-right: 15px
-        //float: left
+
     .indent
         padding-top: 60px
     #contact-us-form
         $fsz: 25px
         input,
         textarea
-            font-size: rem($fsz)
             margin: 0 0 15px
         button
-            font-size: rem($fsz)
             display: block
             width: 100%
 
@@ -86,7 +68,13 @@
         #particles-js
             height: $mobileHeight
         .footer a
-            //font-size: rem(10px)
+            font-size: rem(12px)
+        #t
+            padding: 8% 0
+            margin: 0
+            font-size: rem(35px)
+
+
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px)
 	/**/
