--- a/app/sass/_particles.sass
+++ b/app/sass/_particles.sass
@@ -52,6 +52,8 @@
         font-weight: bold
         color: #272727
         font-size: rem(54px)
+        del
+            text-decoration: none
 
     kbd
         font-family: 'Ubuntu Monospace', monospace
