--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -16,14 +16,14 @@
 *:-moz-placeholder,
 *::-moz-placeholder,
 *:-ms-input-placeholder
-	color: $formTextColor
+	color: $formPlaceholderColor
 	opacity: 1
 
 body input:focus:required:invalid,
 body textarea:focus:required:invalid,
 body input:required:valid,
 body textarea:required:valid
-	color: $formTextColor
+	color: $formPlaceholderColor
 
 html, body
 	height: 100%
@@ -78,6 +78,11 @@ p
 		margin: 0 auto
 		height: 100%
 		vertical-align: middle
+
+#services
+	margin: 0 20px
+	p
+		font-size: 1.2rem
 
 #contact-us-container
 	margin-bottom: 35px
